; ModuleID = '/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_rwebpad_joypad.c_rwebpad_joypad_init.c'
source_filename = "/home/carl/AnghaBench/RetroArch/input/drivers_joypad/extr_rwebpad_joypad.c_rwebpad_joypad_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@EMSCRIPTEN_RESULT_NOT_SUPPORTED = common dso_local global i64 0, align 8
@g_rwebpad_initialized = common dso_local global i32 0, align 4
@rwebpad_gamepad_cb = common dso_local global i32 0, align 4
@EMSCRIPTEN_RESULT_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [56 x i8] c"[EMSCRIPTEN/PAD] failed to create connect callback: %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [59 x i8] c"[EMSCRIPTEN/PAD] failed to create disconnect callback: %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @rwebpad_joypad_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rwebpad_joypad_init(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call i64 (...) @emscripten_sample_gamepad_data()
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @EMSCRIPTEN_RESULT_NOT_SUPPORTED, align 8
  %10 = icmp eq i64 %8, %9
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %35

12:                                               ; preds = %1
  %13 = load i32, i32* @g_rwebpad_initialized, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %34, label %15

15:                                               ; preds = %12
  store i32 1, i32* @g_rwebpad_initialized, align 4
  %16 = load i32, i32* @rwebpad_gamepad_cb, align 4
  %17 = call i64 @emscripten_set_gamepadconnected_callback(i32* null, i32 0, i32 %16)
  store i64 %17, i64* %5, align 8
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* @EMSCRIPTEN_RESULT_SUCCESS, align 8
  %20 = icmp ne i64 %18, %19
  br i1 %20, label %21, label %24

21:                                               ; preds = %15
  %22 = load i64, i64* %5, align 8
  %23 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([56 x i8], [56 x i8]* @.str, i64 0, i64 0), i64 %22)
  br label %24

24:                                               ; preds = %21, %15
  %25 = load i32, i32* @rwebpad_gamepad_cb, align 4
  %26 = call i64 @emscripten_set_gamepaddisconnected_callback(i32* null, i32 0, i32 %25)
  store i64 %26, i64* %5, align 8
  %27 = load i64, i64* %5, align 8
  %28 = load i64, i64* @EMSCRIPTEN_RESULT_SUCCESS, align 8
  %29 = icmp ne i64 %27, %28
  br i1 %29, label %30, label %33

30:                                               ; preds = %24
  %31 = load i64, i64* %5, align 8
  %32 = call i32 @RARCH_ERR(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str.1, i64 0, i64 0), i64 %31)
  br label %33

33:                                               ; preds = %30, %24
  br label %34

34:                                               ; preds = %33, %12
  store i32 1, i32* %2, align 4
  br label %35

35:                                               ; preds = %34, %11
  %36 = load i32, i32* %2, align 4
  ret i32 %36
}

declare dso_local i64 @emscripten_sample_gamepad_data(...) #1

declare dso_local i64 @emscripten_set_gamepadconnected_callback(i32*, i32, i32) #1

declare dso_local i32 @RARCH_ERR(i8*, i64) #1

declare dso_local i64 @emscripten_set_gamepaddisconnected_callback(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
